# openspeedshop-test-suite

./: CMakeLists.txt  README  README_PLEIDES  README_PLEIEDES  build-prof.py  pleiedes_env.json  pleiedes_profiles.json  run_build_cray.sh  run_build_gnu.sh  run_build_intel.sh  run_build_pgi.sh  test-script.py
build_scripts/: run_build_cray.sh  run_build_gnu.sh  run_build_intel.sh  run_build_pgi.sh
cmake/: FindCrayAlps.cmake  FindLibIomp.cmake  FindMpich.cmake  FindMpich2.cmake  FindMpt.cmake  FindMvapich.cmake  FindMvapich2.cmake  FindOpenMPI.cmake  findMPT.cmake
example_config/: cori_env.json  cori_profiles.json  laptop_env.json  laptop_profiles.json  rzgenie_env.json  rzgenie_profiles.json
input_files/: input
src/: CMakeLists.txt
src/AMG2013/: CMakeLists.txt
src/AMG2013/IJ_mv/: CMakeLists.txt
src/AMG2013/krylov/: CMakeLists.txt
src/AMG2013/parcsr_ls/: CMakeLists.txt
src/AMG2013/parcsr_mv/: CMakeLists.txt
src/AMG2013/seq_mv/: CMakeLists.txt
src/AMG2013/sstruct_mv/: CMakeLists.txt
src/AMG2013/struct_mv/: CMakeLists.txt
src/AMG2013/test/: CMakeLists.txt
src/AMG2013/utilities/: CMakeLists.txt
src/HPCCG-1.0/: CMakeLists.txt  Makefile  hpccg-1.0_2016:04:23-07:23:41.yaml  hpccg-1.0_2016:04:23-07:24:01.yaml  hpccg-1.0_2016:05:16-21:21:18.yaml  test_HPCCG-pcsamp.openss
src/IOR/: CMakeLists.txt  NOTE
src/IOR/src/: CMakeLists.txt
src/IOR/src/C/: CMakeLists.txt  NOTE
src/lassen/: Abstract  CMakeLists.txt  Input.cxx  Input.hh  Lassen.cxx  Lassen.hh  LassenMOU.txt  LassenUtil.cxx  LassenUtil.hh  Makefile  Output.cxx  Output.hh  README  README-license.txt  Simulation.cxx  Simulation.hh  SimulationCHARM.ci  SimulationCHARM.cxx  SimulationCHARM.hh  SimulationCHARMMain.ci  SimulationCHARMMain.cxx  SimulationCHARM_interface.hh  SimulationMPI.cxx  SimulationMPI.hh  SimulationParallel.cxx  SimulationParallel.hh  Source.cxx  Source.hh  addit.list  lassenCharmMPI.cxx  lassenMPI.cxx  lassenSerial.cxx
src/lassen/setup/: boundary  gaps
src/loopcheck/: CMakeLists.txt  Makefile  loopcheck.c
src/lulesh/: CMakeLists.txt  Makefile
src/lulesh2.0.3/: CMakeLists.txt  Makefile
src/matmul/: CMakeLists.txt  Makefile  NOTE
src/mpi_wave/: CMakeLists.txt  mpi_wave.c
src/nbody/: CMakeLists.txt  Makefile  RUNIT  nbody-mpi.c
src/nbodyPcontrol/: CMakeLists.txt  Makefile  nbody-mpi.c
src/openmp_matmul/: Makefile  RUNIT  matmul.c
src/openmp_matmul/scripts/pbs/: run_iparallel_qsub.sh  run_mem_qsub.sh  run_parallel_qsub.sh
src/openmp_matmul/scripts/slurm/: run_mem_sbatch.sh  run_parallel_sbatch.sh
src/openmp_stress/: CMakeLists.txt  Makefile  NOTE  OUTPUT  original.stress.input
src/simpleIO/: Makefile  simpleIO.c
src/smg2000/: Makefile  Makefile.include
src/smg2000/krylov/: HYPRE_pcg.c  krylov.h  pcg.c
src/smg2000/struct_ls/: HYPRE_struct_ls.h  HYPRE_struct_pcg.c  HYPRE_struct_smg.c  coarsen.c  cyclic_reduction.c  general.c  headers.h  pcg_struct.c  point_relax.c  semi_interp.c  semi_restrict.c  smg.c  smg.h  smg2_setup_rap.c  smg3_setup_rap.c  smg_axpy.c  smg_relax.c  smg_residual.c  smg_setup.c  smg_setup_interp.c  smg_setup_rap.c  smg_setup_restrict.c  smg_solve.c
src/smg2000/struct_mv/: HYPRE_struct_grid.c  HYPRE_struct_matrix.c  HYPRE_struct_mv.h  HYPRE_struct_stencil.c  HYPRE_struct_vector.c  box.c  box_algebra.c  box_alloc.c  box_neighbors.c  communication.c  communication_info.c  computation.c  grow.c  headers.h  hypre_box_smp_forloop.h  project.c  struct_axpy.c  struct_copy.c  struct_grid.c  struct_innerprod.c  struct_io.c  struct_matrix.c  struct_matrix_mask.c  struct_matvec.c  struct_mv.h  struct_scale.c  struct_stencil.c  struct_vector.c
src/smg2000/test/: Makefile
src/smg2000/utilities/: HYPRE_utilities.h  general.h  hypre_smp_forloop.h  memory.c  memory.h  mpistubs.c  mpistubs.h  random.c  threading.c  threading.h  timer.c  timing.c  timing.h  utilities.h  version
src/stream/: CMakeLists.txt  Makefile  stream.c
src/sweep3d/: '  CMakeLists.txt  driver.f  input.128  input.16  input.2  input.256  input.32  input.512  input.64  input.8  makefile  makefile.gnu  makefile.lanl  msg_stuff.h  sweep.f
src/threads/: CMakeLists.txt  Makefile  NOTE
